# IRB-Enrollment-Reporter

./: README.md  main.py  pyproject.toml
data/: enrollment.xlsx
